--- a/ch04/experimance.css
+++ b/ch04/experimance.css
@@ -35,6 +35,7 @@ h1 {
     height: 50px;
     background-image: -moz-linear-gradient(45deg, orange 0%, white 50%, orange 100%);
     background-image: -webkit-linear-gradient(45deg, orange 0%, white 30%, white 70%, orange 100%);
+    background-image: -o-linear-gradient(45deg, orange 0%, white 30%, white 70%, orange 100%);
 }
 
 .headline {
@@ -94,10 +95,11 @@ p {
 }
 
 img:not(#image) {
-    width: 40px;
-    height: 50px;
+    width: 50px;
+    height: 70px;
     float: left;
-    margin-right: 1em;
+    margin-right: 2em;
+    margin-left: .5em;
 }
 
 .footer {
